--- a/src/main/resources/static/css/scrollButtons.css
+++ b/src/main/resources/static/css/scrollButtons.css
@@ -1,32 +1,15 @@
 .nav_up{
-	padding:7px;
-	background-color:#ee5f5b;
-	border:3px solid #CCC;
+	padding:0px;
+	background-color: #cb2d29;
+	border:3px solid #58c471;
 	position:fixed;
 	background-position:50% 50%;
 	width:40px;
 	height:40px;
-	bottom:60px;
+	top:120px;
 	left:20px;
 	white-space:nowrap;
 	cursor: pointer;
 	border-radius: 5px;
-	opacity:0.7;
-	filter:progid:DXImageTransform.Microsoft.Alpha(opacity=70);
-}
-.nav_down{
-	padding:7px;
-	background-color:#ee5f5b;
-	border:3px solid #CCC;
-	position:fixed;
-	background-position:50% 50%;
-	width:40px;
-	height:40px;
-	bottom:60px;
-	left:65px;
-	white-space:nowrap;
-	cursor: pointer;
-	border-radius: 5px;
-	opacity:0.7;
 	filter:progid:DXImageTransform.Microsoft.Alpha(opacity=70);
 }
